src/test/ui/type-alias-impl-trait/no_inferrable_concrete_type.min_tait.stderr
error: could not find defining uses
  --> $DIR/no_inferrable_concrete_type.rs:9:12
   |
LL | type Foo = impl Copy;
   |            ^^^^^^^^^

error: aborting due to previous error

